Wed Sep 28 10:43:27 2016  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* .travis.yml: delete comments. They were outdated.

Wed Sep 28 09:57:48 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update
	  rubygems to 2.6.7.
	  Release note of 2.6.7: https://github.com/rubygems/rubygems/commit/60f35bd1d2359fc30301d2d4cd72bc6833e8d12a

Wed Sep 28 00:21:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_warning_s_warn): the argument must be an
	  ASCII-compatible string.  [ruby-core:77430] [Bug #12793]

Tue Sep 27 23:22:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (symbol, dsym, parser_set_number_literal): set state to
	  ENDARG, so that `do` after a literal should be `do_block` and
	  bound to the outer method.  [ruby-core:72482] [Bug #11873]

	* parse.y (parse_ident): revert r56198.

	* parse.y (warn_balanced): the state of symbol and numeric
	  literals is now EXPR_ENDARG, do not exclude it.

Tue Sep 27 22:59:42 2016  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: news about Warning.warn.

Tue Sep 27 18:10:18 2016  Jeremy Evans <code@jeremyevans.net>

	* error.c: This makes all warnings raised call Warning.warn, which
	  by default does the same thing it does currently
	  (rb_write_error_str).  You can override Warning.warn to change
	  the behavior. [ruby-core:75016] [Feature #12299]

Tue Sep 27 17:35:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseqw_s_compile_file): deal with syntax error as well as
	  compile, and should not abort when rescued.

Tue Sep 27 12:07:17 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi/cookie.rb (parse): don't allow , as a separator. [Bug #12791]

	* lib/webrick/cookie.rb (parse): ditto.

Mon Sep 26 21:37:21 2016  Akinori MUSHA  <knu@iDaemons.org>

	* man/erb.1, man/irb.1, man/ri.1, man/ruby.1: Remove Ns before
	  punctuation.

Mon Sep 26 16:23:49 2016  Kazuki Yamaguchi  <k@rhe.jp>
